更新发布包，工具及说明
git-svn-id: http://acooly.cn/svn/framework/acooly-module-coder/trunk@1491 ebe96db4-64c5-0a46-a2e0-819f53ba128a